--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,33 @@
   @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap');
 
 
-body {
+  body {
     padding: 15px;
-    width: 400px;
-    height: 250px;
+    display: inline-block;
     background-color: #1B4965;
     color: white;
     font-family: "Nunito", sans-serif;
+  }
+  
+
+  button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 10px 0;
+    cursor: pointer;
+  }
+
+  .button {
+    display: block;
+  }
+
+  .oculto {
+    display: none;
   }
   
