--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 
   body {
     padding: 15px;
+    width: 250px;
     display: inline-block;
     background-color: #1B4965;
     color: white;
@@ -22,10 +23,6 @@
     font-size: 16px;
     margin: 10px 0;
     cursor: pointer;
-  }
-
-  .button {
-    display: block;
   }
 
   .oculto {
